2001-02-28  Michael Snyder  <msnyder@mvstp600e.cygnus.com>

	* breakpoint.c (print_one_breakpoint): Formatting clean-up.
	(read_memory_nobpt): Ditto.
	(ep_is_catchpoint): Ditto.
	(ep_is_shlib_catchpoint): Ditto.
	(ep_is_exception_catchpoint): Ditto.
	(describe_other_breakpoints): Ditto.

Wed Feb 28 20:37:36 2001  Andrew Cagney  <ac131313@redhat.com>

	* regcache.h (register_valid): Fix comment documenting valid
	states.

Tue Feb 27 23:56:23 2001  Andrew Cagney  <ac131313@redhat.com>

	From Steven Johnson:
	* regcache.h: New file.
	
	* value.h (read_register_bytes, read_register_gen)
	(write_register_gen, write_register_bytes)
	(read_register, read_register_pid)
	(read_signed_register, read_signed_register_pid)
	(write_register, write_register_pid)
	(register_cached, set_register_cached)
	(register_changed, register_buffer)
	(registers_changed, supply_register): Move declaration from here.
	* regcache.h: To here.
	* gdbcore.h (registers_fetched): Ditto.
	* inferior.h (registers, registers_valid): Ditto.

	* regcache.c (generic_target_read_pc, read_pc_pid, read_pc,
	generic_target_write_pc, write_pc_pid, write_pc,
	generic_target_read_sp, read_sp, generic_target_write_sp,
	write_sp, generic_target_read_fp, read_fp,
	generic_target_write_fp, write_fp): Add note that these functions
	will be moved from this file.
	
	* a29k-tdep.c: Include "regcache.h".
	* a68v-nat.c: Ditto.
	* abug-rom.c: Ditto.
	* alpha-nat.c: Ditto.
	* alpha-tdep.c: Ditto.
	* alphabsd-nat.c: Ditto.
	* arc-tdep.c: Ditto.
	* arm-linux-nat.c: Ditto.
	* arm-linux-tdep.c: Ditto.
	* arm-tdep.c: Ditto.
	* blockframe.c: Ditto.
	* core-aout.c: Ditto.
	* core-sol2.c: Ditto.
	* corelow.c: Ditto.
	* cpu32bug-rom.c: Ditto.
	* cxux-nat.c: Ditto.
	* d10v-tdep.c: Ditto.
	* d30v-tdep.c: Ditto.
	* dbug-rom.c: Ditto.
	* dink32-rom.c: Ditto.
	* dve3900-rom.c: Ditto.
	* findvar.c: Ditto.
	* fr30-tdep.c: Ditto.
	* frame.c: Ditto.
	* go32-nat.c: Ditto.
	* h8300-tdep.c: Ditto.
	* h8500-tdep.c: Ditto.